# chancery

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  determinism.yml
docs/plans/: C0-chancery-kernel.md
docs/preliminary/: 00-extraction-overview.md  01-attest-ledger.md  02-action-gate.md  03-trust-window.md  04-deployment-and-portability.md  05-canonical-json.md
kernel-addon/: Cargo.toml  build.rs  package.json  rust-toolchain.toml
kernel-addon/src/: autonomy.rs  context.rs  gate.rs  ladder.rs  lib.rs  napi_api.rs  payload.rs  tier.rs  wire.rs
kernel-addon/src/checks/: fatigue.rs  grounding.rs  injection.rs  mod.rs  suppression.rs  tone.rs
kernel-addon/tests/: composition.rs
